force-app/main/default/objects/Opportunity_Competitor__c/Opportunity_Competitor__c.object-meta.xml
<CustomObject>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OCR-{000000}</displayFormat>
        <label>Opportunity Competitor Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>