force-app/main/default/objects/Opportunity_Competitor__c/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>