force-app/main/default/objects/Opportunity_Competitor__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Competitor</fullName>
            </value>
            <value>
                <fullName>Secondary Competitor</fullName>
            </value>
            <value>
                <fullName>Also mentioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>